--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Depends: R (>= 4.2)
-Imports:
-    quadprog,
+Depends: R (>= 4.2),    quadprog,
     far,
     stats,
     utils,
